# impossible_game

./: .gitignore  CMakeLists.txt  outline.txt  tmp.txt
include/: block.h  board.h  interrupts.h  utils.h  window.h
src/: main.c
src/block/: block.c
src/board/: board.c
src/interrupts/: interrupts.c
src/utils/: utils.c
src/window/: window.c
